doc: documentation update
