# product-service/src/functions/addProduct/schema.ts
@@ -1,5 +1,3 @@
-import { productSchema } from "@functions/schema";
-
 export const inputSchema = {
 	type: "object",
 	properties: {
@@ -23,5 +21,3 @@ export const inputSchema = {
 		},
 	},
 } as const;
-
-export const outputSchema = productSchema;
