# product-service/src/functions/getProductsById/schema.ts
@@ -1,5 +1,3 @@
-import { productSchema } from "@functions/schema";
-
 export const inputSchema = {
 	type: "object",
 	properties: {
@@ -14,5 +12,3 @@ export const inputSchema = {
 		},
 	},
 } as const;
-
-export const outputSchema = productSchema;
